# voice

./: README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  processor.rs
src-tauri/src/transcription/: mod.rs  whisper.rs
src/components/: Overlay.test.tsx  Overlay.tsx  Settings.tsx
src/test/: setup.ts
