[package]
name = "voice"
version = "0.1.0"
description = "Voice-to-text application with local Whisper processing"
authors = ["Anton Stjernquist"]
edition = "2021"

[lib]
name = "voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
whisper-rs = "0.13"
tokio = { version = "1", features = ["sync", "rt"] }
parking_lot = "0.12"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
futures-util = "0.3"
